@startuml
skinparam classAttributeIconSize 0
abstract class Joker
class Ronda {
    -numeroRonda: int
    -puntajeObjetivo: int
    -puntajeActual: int
    +{static}Ronda(numeroRonda: int, descartes: Descarte, manos: Mano, puntajeObjetivo: int, tienda: Tienda)
    +jugarRonda(cartasAJugar: ArrayList<Carta>, jokers: ArrayList<Joker>, evaluadorMano: EvaluadorMano): void
    +permitirDescarte(): boolean
    +permitirJugar(): boolean
}

Ronda "1" --> "1" Tienda
Ronda "1" --> "*" Descarte
Ronda "1" --> "*" Mano

Ronda ..> Carta: <<use>>
Ronda ..> EvaluadorMano: <<use>>
Ronda ..> Joker: <<use>>
@enduml